Fixed depth test and improved texture class
Depth test closest param was too low (0.1f), changed to 1.0f
Added extra params in texture constructor for added configuration when creating a new texture.
Organised textues and shaders into folders.

--- a/Pong.vcxproj
+++ b/Pong.vcxproj
@@ -162,10 +162,6 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="default.frag" />
-    <None Include="default.vert" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="EBO.h" />
     <ClInclude Include="Matrix4.h" />
     <ClInclude Include="Shader.h" />
@@ -175,7 +171,12 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="cube.png" />
+    <None Include="shaders\default.frag" />
+    <None Include="shaders\default.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\acer.jpg" />
+    <Image Include="textures\cube.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
