--- a/Pong.vcxproj.filters
+++ b/Pong.vcxproj.filters
@@ -53,14 +53,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="default.vert">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="default.frag">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="VBO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -84,7 +76,18 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="cube.png">
+    <None Include="shaders\default.frag">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\default.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\cube.png">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="textures\acer.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
   </ItemGroup>
