--- a/Pong.vcxproj.filters
+++ b/Pong.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Mesh.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VBO.h">
@@ -71,24 +68,21 @@
     <ClInclude Include="Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\default.frag">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="shaders\default.vert">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
+    <Image Include="cube.png">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="acer.jpg">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="textures\cube.png">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
-    <Image Include="textures\acer.jpg">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
+    <None Include="default.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="default.frag">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
