--- a/Pong.vcxproj
+++ b/Pong.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{C560CAD2-4794-4DB3-A9F0-A641EE472502}</ProjectGuid>
     <RootNamespace>Pong</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenGL3DTest</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -175,8 +176,7 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="acer.jpg" />
-    <Image Include="cube.png" />
+    <Image Include="uvTest.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default.frag" />
