--- a/Pong.vcxproj.filters
+++ b/Pong.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="Cube.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Utils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="EBO.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
@@ -60,14 +57,14 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files\Engine</Filter>
+    </ClCompile>
     <ClCompile Include="List.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Texture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -90,14 +87,14 @@
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="List.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files\Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="cube.png">
-      <Filter>Resource Files\Textures</Filter>
-    </Image>
-    <Image Include="acer.jpg">
+    <Image Include="uvTest.jpg">
       <Filter>Resource Files\Textures</Filter>
     </Image>
   </ItemGroup>
