--- a/Pong.vcxproj.filters
+++ b/Pong.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="List.cpp">
       <Filter>Source Files\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h">
@@ -88,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="Texture.h">
       <Filter>Header Files\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
