--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,6 @@
-* text=auto
-*.frag linguist-language="GLSL"
-*.vert linguist-language="GLSL"
-*.cpp linguist-language="C++"
-*.h linguist-language="C++"
+*.frag linguist-language=GLSL
+*.vert linguist-language=GLSL
+*.cpp linguist-language=C++
+*.h linguist-language=C++
 glm/** linguist-vendored
 Libraries/** linguist-vendored
