--- a/Pong.vcxproj
+++ b/Pong.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C560CAD2-4794-4DB3-A9F0-A641EE472502}</ProjectGuid>
     <RootNamespace>Pong</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>OpenGL3DTest</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -179,6 +179,9 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="cube_bottom.jpg" />
+    <Image Include="cube_side.jpg" />
+    <Image Include="cube_top.jpg" />
     <Image Include="uvTest.jpg" />
   </ItemGroup>
   <ItemGroup>
